; ModuleID = '/home/carl/AnghaBench/freebsd/sys/xen/xenbus/extr_xenbusb.c_xenbusb_delete_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/xen/xenbus/extr_xenbusb.c_xenbusb_delete_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenbus_device_ivars = type { %struct.TYPE_2__, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @xenbusb_delete_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xenbusb_delete_child(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.xenbus_device_ivars*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call %struct.xenbus_device_ivars* @device_get_ivars(i32 %6)
  store %struct.xenbus_device_ivars* %7, %struct.xenbus_device_ivars** %5, align 8
  %8 = load %struct.xenbus_device_ivars*, %struct.xenbus_device_ivars** %5, align 8
  %9 = getelementptr inbounds %struct.xenbus_device_ivars, %struct.xenbus_device_ivars* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.xenbus_device_ivars*, %struct.xenbus_device_ivars** %5, align 8
  %15 = getelementptr inbounds %struct.xenbus_device_ivars, %struct.xenbus_device_ivars* %14, i32 0, i32 1
  %16 = call i32 @xs_unregister_watch(%struct.TYPE_2__* %15)
  br label %17

17:                                               ; preds = %13, %2
  %18 = load %struct.xenbus_device_ivars*, %struct.xenbus_device_ivars** %5, align 8
  %19 = getelementptr inbounds %struct.xenbus_device_ivars, %struct.xenbus_device_ivars* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %17
  %24 = load %struct.xenbus_device_ivars*, %struct.xenbus_device_ivars** %5, align 8
  %25 = getelementptr inbounds %struct.xenbus_device_ivars, %struct.xenbus_device_ivars* %24, i32 0, i32 0
  %26 = call i32 @xs_unregister_watch(%struct.TYPE_2__* %25)
  br label %27

27:                                               ; preds = %23, %17
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @device_delete_child(i32 %28, i32 %29)
  %31 = load %struct.xenbus_device_ivars*, %struct.xenbus_device_ivars** %5, align 8
  %32 = call i32 @xenbusb_free_child_ivars(%struct.xenbus_device_ivars* %31)
  ret void
}

declare dso_local %struct.xenbus_device_ivars* @device_get_ivars(i32) #1

declare dso_local i32 @xs_unregister_watch(%struct.TYPE_2__*) #1

declare dso_local i32 @device_delete_child(i32, i32) #1

declare dso_local i32 @xenbusb_free_child_ivars(%struct.xenbus_device_ivars*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
